# bbc_llm_showcase

./: README.md  app.py  articles.csv  explore_data.ipynb  pyproject.toml  scrape_data.ipynb  temp.ipynb  test_app.py
.github/workflows/: schedule-notebook.yml
data/: filtered_articles.csv
src/chunking/: chunking.py
src/utils/: data_preprocessor.py  rag_util.py
utils/: pinecone_util.py
