[tool.poetry]
name = "llm-showcase"
version = "0.1"
description = "Showcasing LLM capabilities on BBC News"
authors = ["Philippe Büdinger <philippe@buedinger-ai.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
bs4 = "^0.0.2"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
nbconvert = "^7.16.4"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
